--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@ web-build/
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+
+#IDE's settings folders
+.vs/
+.vscode/
+.idea/
