--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-gesture-handler": "^2.9.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^13.8.0",
     "react-native-svg-transformer": "^1.0.0"
   },
